[package]
name = "ipblocker"
version = "0.1.0"
edition = "2021"
authors = ["Satadeep Dasgupta"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
clap = { version = "4.5.21", features = ["derive"] }
minijinja = "2.5.0"
prettytable-rs = "0.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "derive", "chrono"] }
tokio = { version = "1.41.1", features = ["fs", "rt-multi-thread", "macros"] }
